--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
-</body>
-</html>
+  <div class="main-container">
+    <header>
+      <nav>
+        <a class="space" href="">Home</a>
+        <a class="space" href="">About</a>
+        <a class="space" href="">Portfolio</a>
+        <a href="">Contact</a>
+      </nav>
+    </header>
+
+    <div class="top-content">
+      <section>
+        <img src="images/profile-pic.jpg" alt="office desktop">
+        <h1>FRANCOIS <br>
+        CHERY</h1>
+        <h2 class="title"> LAMBDA WEBPT12</h2>
+
+        <h3>Coding Is LIFE</h3>
+        <hr>
+        <p>I am new student at Lambda growing in my new found knowledge of Web Developement. If you ever want to contact to me and work together click the button below!</p>
+        <button>Lets Collaborate!</button>
+      </section>
+    </div>
+
+    <div class="bottom-content">
+      <section class="objective">
+        <h2>Objective</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione harum consectetur, a excepturi quae iure architecto unde, eos rem deleniti in hic sed quis accusamus. Repellendus id provident praesentium laboriosam.</p>
+      </section>
+
+      <section class="skills">
+        <h2>Skills</h2>
+        <div>
+          <p>Time Management</p>
+          <p>Dedicated Team Player</p>
+          <p>Strong Communication Skills</p>
+          <p>Moderate in HTML, CSS, Javascript</p>
+        </div>
+      </section>
+    </div>
+  </div>
+</html> 
