committing my changes, still not my best

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <div class="main-container">
     <header>
       <nav>
-        <a class="space" href="">Home</a>
-        <a class="space" href="">About</a>
-        <a class="space" href="">Portfolio</a>
-        <a href="">Contact</a>
+        <a class="space" href="#">Home</a>
+        <a class="space" href="#">About</a>
+        <a class="space" href="#">Portfolio</a>
+        <a href="#">Contact</a>
       </nav>
     </header>
 
@@ -38,21 +38,31 @@
       </section>
     </div>
 
-    <div class="bottom-content">
+    <div class="middle-content">
       <section class="objective">
         <h2>Objective</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione harum consectetur, a excepturi quae iure architecto unde, eos rem deleniti in hic sed quis accusamus. Repellendus id provident praesentium laboriosam.</p>
+        <p> Seeking to grow, learn, and adapt in the fast pace world of technology. Applying all my knowledge and skills for technical advancement.</p>
       </section>
 
       <section class="skills">
         <h2>Skills</h2>
         <div>
-          <p>Time Management</p>
-          <p>Dedicated Team Player</p>
-          <p>Strong Communication Skills</p>
-          <p>Moderate in HTML, CSS, Javascript</p>
+          <div class="box"><p>Time Management</p></div>
+          <div class="box"><p>Dedicated Team Player</p></div>
+          <div class="box"><p>Strong Communication Skills</p></div>
+          <div class="box"><p>Moderate in HTML, CSS, Javascript</p></div>
         </div>
       </section>
     </div>
+
+    <section class="bottom-content">
+      <h2>Work History</h2>
+      <div>
+        <h3>Years</h3>
+        <h3>Company</h3>
+        <h3>Title</h3>
+        <h3>Job Description</h3>
+      </div>
+    </section>
   </div>
 </html> 
